fix: correct Angular Material theming API in styles.scss
- Replace deprecated mat.theme() with proper mat.all-component-themes()
- Add required @use imports for Angular Material core
- Define proper color palettes using mat.define-palette()
- Fix Netlify build SASS compilation errors

--- a/smart-calendar/src/styles.scss
+++ b/smart-calendar/src/styles.scss
@@ -1,21 +1,21 @@
-
-// Include theming for Angular Material with `mat.theme()`.
-// This Sass mixin will define CSS variables that are used for styling Angular Material
-// components according to the Material 3 design spec.
-// Learn more about theming and how to use it for your application's
-// custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@use '@angular/material/core' as mat-core;
 
-html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
-}
+@include mat-core.core();
+
+$primary-palette: mat.define-palette(mat.$indigo-palette);
+$accent-palette: mat.define-palette(mat.$pink-palette);
+
+$theme: mat.define-light-theme((
+  color: (
+    primary: $primary-palette,
+    accent: $accent-palette,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
+));
+
+@include mat.all-component-themes($theme);
 
 body {
   // Default the application to a light color theme. This can be changed to
